# simplehash

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  generate_corpus.py  generate_fnv_corpus.go  generate_mmh3_corpus.py
.github/workflows/: ci.yml
benches/: city_benchmark.rs  fnv_benchmark.rs  hash_benchmark.rs  hashmap_benchmark.rs  hashmap_key_length_benchmark.rs  murmur_benchmark.rs  rendezvous_benchmark.rs
cityhash-sys/: Cargo.toml  README.md  build.rs  wrapper.h
cityhash-sys/src/: lib.rs
data/: fnv_test_corpus.json  mmh3_test_corpus.json  test_corpus.json
farmhash-sys/: Cargo.toml  README.md  build.rs  wrapper.cc  wrapper.h
farmhash-sys/src/: lib.rs
farmhash-sys/src/farmhash/: farmhash.cc  farmhash.h
farmhash-sys/tests/: public_api.rs
src/: city.rs  farm.rs  fnv.rs  lib.rs  main.rs  murmur.rs  rendezvous.rs
tests/: city_test.rs
