[package]
name = "simplehash"
version = "0.1.0"
edition = "2024"
authors = ["Cole Mackenzie <colemackenzie1@gmail.com>"]
description = "A simple, fast Rust library implementing common non-cryptographic hash functions"
repository = "https://github.com/cmackenzie1/simplehash"
license = "MIT"
keywords = ["murmurhash", "fnv", "fnv1a", "murmurhash3", "hash"]
categories = ["algorithms"]
readme = "README.md"

[dependencies]

[dev-dependencies]
serde_json = "1.0"
