[package]
name = "simplehash"
version = "0.1.3"
edition = "2024"
authors = ["Cole Mackenzie <colemackenzie1@gmail.com>"]
description = "A simple, fast Rust library implementing common non-cryptographic hash functions: FNV, MurmurHash3, CityHash, and Rendezvous hashing"
repository = "https://github.com/cmackenzie1/simplehash"
license = "MIT"
keywords = ["murmurhash", "fnv", "cityhash", "rendezvous", "hash"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "simplehash"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "fnv_benchmark"
harness = false

[[bench]]
name = "hash_benchmark"
harness = false

[[bench]]
name = "hashmap_benchmark"
harness = false

[[bench]]
name = "hashmap_key_length_benchmark"
harness = false

[[bench]]
name = "murmur_benchmark"
harness = false

[[bench]]
name = "rendezvous_benchmark"
harness = false

[[bench]]
name = "city_benchmark"
harness = false
