[package]
name = "cityhash-sys"
version = "0.1.0"
edition = "2024"
links = "cityhash"
build = "build.rs"
description = "Rust FFI bindings for Google's CityHash hashing algorithms"
license = "MIT"
authors = ["Cole Mackenzie <colemackenzie1@gmail.com>"]
repository = "https://github.com/cmackenzie1/simplehash/cityhash-sys"
keywords = ["hash", "cityhash", "bindings"]
categories = ["api-bindings", "algorithms"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
bindgen = "0.71"
